2003-01-06  David Carlton  <carlton@math.stanford.edu>

	* config/djgpp/fnchange.lst: Mention
	testsuite/gdb.c++/namespace1.cc.
	* cp-support.h: Declare cp_lookup_namespace_symbol.
	* cp-support.c (cp_lookup_namespace_symbol): New function.
	(cp_check_namespace_symbol): Call cp_lookup_namespace_symbol.
	(cp_lookup_possible_namespace_symbol): Update comment.
	* symtab.c (lookup_symbol_aux_file): Add 'anonymous_namespace'
	argument.
	(lookup_symbol_namespace): Call lookup_symbol_aux_file with new
	argument.
	* cp-support.h: Declare cp_is_anonymous.
	* cp-support.c (cp_is_anonymous): New function.
	* buildsym.c (add_symbol_to_list): Don't test for anonymous
	namespace mention here.
	(scan_for_anonymous_namespaces): Test for it here, instead.
	* symtab.c (lookup_symbol_aux_minsyms): Delete.
	(lookup_symbol_aux_nonlocal): Don't call
	lookup_symbol_aux_minsyms.

2002-12-24  David Carlton  <carlton@math.stanford.edu>

	* MAINTAINERS: Delete OBSOLETE targets.
	* config/sparc/tm-sparc.h: Delete duplicate definition of
	DEPRECATED_PC_IN_CALL_DUMMY.

2002-12-23  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (search_symbols): Update comment.
	(lookup_symbol): Don't demangle names.
	(lookup_symbol_minsym): Delete FIXME comment.
	(lookup_symbol_linkage): Add comment.
	(lookup_symbol_aux): Rename 'mangled_name' argument to
	'linkage_name'.
	(lookup_symbol_aux_local): Ditto.
	(lookup_symbol_aux_block): Ditto.
	(lookup_symbol_aux_nonlocal): Ditto.
	(lookup_symbol_aux_file): Ditto.
	(lookup_symbol_aux_symtabs): Ditto.
	(lookup_symbol_aux_psymtabs): Ditto.
	(lookup_symbol_aux_using): Ditto.
	(lookup_symbol_aux_using_loop): Ditto.
	(lookup_symbol_namespace): Ditto.
	(lookup_symbol_aux_minsyms): Ditto.
	* symfile.c (psymbol_init_demangled_name): Delete unnecessary
	variable, initialization.

	* Merge from mainline; tag is carlton_dictionary-20021223-merge.

2002-12-23  Daniel Jacobowitz  <drow@mvista.com>

	* config/pa/nm-hppab.h: Delete duplicate CANNOT_STORE_REGISTER decl.